[package]
name = "program"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.10.15"
arrayref = "0.3.6"
bincode = "1.3.2"
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
serde = "1.0.130"
serde_derive = "1.0.103"
bytemuck = "1.9.1"
spl-token = { version = "^3.0.0", features=["no-entrypoint"] }
spl-associated-token-account = {version="1.0.5", features=["no-entrypoint"]}
spl-token-2022 = {version="0.3.0", features=["no-entrypoint"]}
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "=1.10.20"
solana-sdk = "1.10.8"


[lib]
crate-type = ["cdylib", "lib"]